feat: make pvz response in api specs a separate component for better codegen
