# internal/api/dto.gen.go
@@ -15,9 +15,9 @@ const (
 
 // Defines values for PVZCity.
 const (
-	Kazan           PVZCity = "Казань"
-	Moscow          PVZCity = "Москва"
-	SaintPetersburg PVZCity = "Санкт-Петербург"
+	Kazan            PVZCity = "Казань"
+	Moscow           PVZCity = "Москва"
+	SaintsPetersburg PVZCity = "Санкт-Петербург"
 )
 
 // Defines values for ProductType.
@@ -72,6 +72,18 @@ type PVZ struct {
 
 // PVZCity defines model for PVZ.City.
 type PVZCity string
+
+// PVZInfo defines model for PVZInfo.
+type PVZInfo struct {
+	Pvz        *PVZ `json:"pvz,omitempty"`
+	Receptions *[]struct {
+		Products  *[]Product `json:"products,omitempty"`
+		Reception *Reception `json:"reception,omitempty"`
+	} `json:"receptions,omitempty"`
+}
+
+// PVZResponse defines model for PVZResponse.
+type PVZResponse = []PVZInfo
 
 // Product defines model for Product.
 type Product struct {
